# inventory-management-application

./: .clang-format  .gitignore  CMakeLists.txt  InventoryManagementApplication_hr_HR.ts  README.md  appveyor.yml  main.cpp
Backend/: CMakeLists.txt
Backend/DatabaseQuery/: CMakeLists.txt  database_query.cpp  database_query.h
GUI/: CMakeLists.txt  application_settings.h  directx_window.h  gui_runner.cpp  gui_runner.h  imgui_content_window.h  main_menu_bar.h  main_window.h  runner.cpp  runner.h  top_menu_bar.h  utility.h  window_bootstrap.h
GUI/src/: mainwindow.cpp  mainwindow.h  mainwindow.ui
